--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PSK Services</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Boldonse:wght@400;500;600;700&display=swap">
+    <title>Muhammed Jabeer</title>
+      <link 
+    rel="icon" 
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' stop-color='%230f0'/><stop offset='100%' stop-color='%23000000'/></linearGradient></defs><rect width='100' height='100' fill='url(%23grad)'/><text x='50%' y='55%' font-size='50' fill='white' text-anchor='middle' dominant-baseline='middle'>MJ</text></svg>"
+  >
+
+
+    <!-- Google Fonts: Inter -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    />
+
+    <style>
+      /* Apply Inter everywhere */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Inter", sans-serif;
+      }
+
+      body {
+        line-height: 1.6;
+        color: #111; /* default text color */
+        background: #fff; /* default background */
+      }
+
+      /* Headings - bold by default */
+      h1, h2, h3, h4, h5, h6 {
+        font-weight: 700;
+        line-height: 1.2;
+      }
+
+      /* Paragraphs - normal weight */
+      p {
+        font-weight: 400;
+      }
+
+    
+    </style>
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+
+    <!-- IMPORTANT: DO NOT REMOVE -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
